--- a/fast64_internal/f3d/node_library/TextureSettings_Advanced.json
+++ b/fast64_internal/f3d/node_library/TextureSettings_Advanced.json
@@ -7,6 +7,8 @@
 				327.601,
 				-84.3845
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -30,6 +32,8 @@
 				297.8438,
 				-61.5399
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -53,6 +57,8 @@
 				245.6165,
 				-19.2992
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -76,6 +82,8 @@
 				221.9516,
 				4.295
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -99,6 +107,8 @@
 				201.9014,
 				25.3357
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -122,6 +132,8 @@
 				273.49,
 				-40.8118
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -145,6 +157,8 @@
 				153.7096,
 				68.1714
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -168,6 +182,8 @@
 				178.6082,
 				47.2582
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -191,6 +207,8 @@
 				134.1042,
 				91.1545
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -214,6 +232,8 @@
 				113.7192,
 				113.236
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -237,6 +257,8 @@
 				76.4437,
 				157.755
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -260,6 +282,8 @@
 				-15.6982,
 				244.5815
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -283,6 +307,8 @@
 				9.509,
 				222.4797
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -306,6 +332,8 @@
 				96.2147,
 				135.1684
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -329,6 +357,8 @@
 				369.8691,
 				-106.8721
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -352,6 +382,8 @@
 				54.724,
 				179.1897
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -375,6 +407,8 @@
 				32.953,
 				201.1782
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -398,6 +432,8 @@
 				193.9604,
 				-495.4348
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -421,6 +457,8 @@
 				262.6562,
 				-431.9967
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -444,6 +482,8 @@
 				238.3406,
 				-452.5447
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -467,6 +507,8 @@
 				216.3712,
 				-474.1058
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -490,6 +532,8 @@
 				175.8054,
 				-518.3969
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -513,6 +557,8 @@
 				150.1764,
 				-540.5582
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -536,6 +582,8 @@
 				121.9779,
 				-562.9517
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -559,6 +607,8 @@
 				93.875,
 				-584.1543
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -582,6 +632,8 @@
 				66.5914,
 				-606.0298
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -605,6 +657,8 @@
 				326.0364,
 				-364.0017
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -628,6 +682,8 @@
 				13.9793,
 				-650.463
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -651,6 +707,8 @@
 				-17.7109,
 				-673.2063
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -674,6 +732,8 @@
 				286.4957,
 				-408.7227
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -697,6 +757,8 @@
 				307.0347,
 				-386.1069
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -720,6 +782,8 @@
 				348.6143,
 				-343.0011
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -743,6 +807,8 @@
 				40.6278,
 				-628.2281
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -766,6 +832,8 @@
 				369.869,
 				-694.4165
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -797,6 +865,8 @@
 				369.869,
 				-727.5137
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -820,6 +890,8 @@
 				739.3362,
 				-727.5137
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -843,6 +915,8 @@
 				-47.7528,
 				-695.3298
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -871,6 +945,7 @@
 				"name": "Advanced Texture Settings and 3 Point"
 			},
 			"width": 323.6924743652344,
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "Width"
@@ -989,6 +1064,7 @@
 				1046.3458,
 				158.4812
 			],
+			"width_hidden": 80.0,
 			"inputs": {
 				"0": {
 					"name": "0_UV00"
@@ -1045,6 +1121,7 @@
 				-613.3323,
 				194.4752
 			],
+			"width_hidden": 80.0,
 			"outputs": {
 				"0": {
 					"hide_value": true,
@@ -1374,6 +1451,7 @@
 				"name": "Advanced Texture Settings and 3 Point"
 			},
 			"width": 320.1097717285156,
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "Width"
@@ -1487,6 +1565,7 @@
 			}
 		}
 	},
+	"cached_hash": "017de2b395efc751fe2811d92808bec5",
 	"inputs": [
 		{
 			"name": "X",
@@ -1728,7 +1807,7 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "86f94eb27fd916a4f6918692983e184f",
+	"interface_hash": "d1b22c9654d6c59f20e5341cc371bc09",
 	"bpy_ver": [
 		3,
 		2,
