--- a/fast64_internal/f3d/node_library/Lite_Texture_Settings_and_3_Point.json
+++ b/fast64_internal/f3d/node_library/Lite_Texture_Settings_and_3_Point.json
@@ -15,7 +15,8 @@
 			"height": 44.99998092651367,
 			"label": "Create sample UVs for (X+1, Y) and (X, Y+1)",
 			"use_custom_color": true,
-			"width": 503.0045166015625
+			"width": 503.0045166015625,
+			"width_hidden": 100.0
 		},
 		"Frame.003": {
 			"bl_idname": "NodeFrame",
@@ -32,7 +33,8 @@
 			"label": "Get 3 Point Lerp Frac",
 			"label_size": 13,
 			"use_custom_color": true,
-			"width": 295.88427734375
+			"width": 295.88427734375,
+			"width_hidden": 100.0
 		},
 		"Reroute.014": {
 			"bl_idname": "NodeReroute",
@@ -40,6 +42,8 @@
 				-574.6416,
 				110.0638
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -63,6 +67,8 @@
 				-550.9844,
 				88.231
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -86,6 +92,8 @@
 				209.2365,
 				-45.7056
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -110,6 +118,7 @@
 				-78.5068
 			],
 			"hide": true,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "X"
@@ -141,6 +150,7 @@
 				-78.5068
 			],
 			"width": 141.7603302001953,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Vector"
@@ -178,6 +188,7 @@
 				-36.0021
 			],
 			"hide": true,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "X"
@@ -208,6 +219,8 @@
 				147.3318,
 				-234.631
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -231,6 +244,8 @@
 				189.5645,
 				-126.5774
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -258,6 +273,8 @@
 				178.9058,
 				-210.7318
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -281,6 +298,7 @@
 				801.3328,
 				-90.8818
 			],
+			"width_hidden": 80.0,
 			"inputs": {
 				"0": {
 					"name": "UV00"
@@ -311,6 +329,8 @@
 				719.3997,
 				-147.0134
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -334,6 +354,8 @@
 				746.0419,
 				-169.5363
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -357,6 +379,8 @@
 				774.0813,
 				-125.4229
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -380,6 +404,8 @@
 				719.3994,
 				-45.7768
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -403,6 +429,8 @@
 				746.0419,
 				-88.8349
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -426,6 +454,8 @@
 				774.0813,
 				-191.6426
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -449,6 +479,7 @@
 				235.145,
 				-35.4262
 			],
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Vector"
@@ -485,6 +516,8 @@
 				209.2366,
 				153.2448
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -512,6 +545,8 @@
 				774.0811,
 				153.3862
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -535,6 +570,8 @@
 				-156.6158,
 				99.6678
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -558,6 +595,8 @@
 				-525.1768,
 				-22.6885
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -581,6 +620,8 @@
 				-574.6416,
 				223.5192
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -604,6 +645,8 @@
 				-550.9844,
 				202.0853
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -627,6 +670,8 @@
 				-525.1768,
 				180.4871
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -650,6 +695,8 @@
 				-498.0605,
 				268.0341
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -677,6 +724,8 @@
 				-477.3921,
 				246.6233
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -704,6 +753,8 @@
 				-477.5148,
 				438.4187
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -727,6 +778,8 @@
 				-498.2127,
 				485.5062
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -750,6 +803,8 @@
 				-187.2277,
 				438.4187
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -773,6 +828,8 @@
 				-180.3501,
 				485.5062
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -796,6 +853,8 @@
 				-130.9663,
 				365.7993
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -823,6 +882,8 @@
 				178.9058,
 				407.565
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -846,6 +907,8 @@
 				147.3318,
 				349.666
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -869,6 +932,8 @@
 				-156.6158,
 				387.8604
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -902,6 +967,7 @@
 				"name": "Lite Texture Settings"
 			},
 			"width": 195.6847381591797,
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "X"
@@ -947,6 +1013,8 @@
 				-206.4002,
 				322.0233
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -970,6 +1038,8 @@
 				-184.6187,
 				344.7003
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -993,6 +1063,8 @@
 				-498.0605,
 				153.758
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1016,6 +1088,8 @@
 				-477.3921,
 				132.5208
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1039,6 +1113,8 @@
 				-368.912,
 				-118.2419
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1066,6 +1142,8 @@
 				-368.912,
 				-140.1031
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1093,6 +1171,8 @@
 				-368.912,
 				-68.5068
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1120,6 +1200,8 @@
 				-368.912,
 				-46.5068
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1147,6 +1229,8 @@
 				-368.912,
 				-92.8171
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1174,6 +1258,8 @@
 				-368.912,
 				-164.923
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1201,6 +1287,7 @@
 				-784.7543,
 				188.4501
 			],
+			"width_hidden": 80.0,
 			"outputs": {
 				"0": {
 					"name": "Width",
@@ -1292,6 +1379,8 @@
 				-620.0024,
 				154.0267
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1319,6 +1408,8 @@
 				-620.0894,
 				-89.2291
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1342,6 +1433,8 @@
 				-597.055,
 				-162.009
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1365,6 +1458,8 @@
 				-597.18,
 				131.8081
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1392,6 +1487,8 @@
 				-130.9664,
 				1.649
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1415,6 +1512,8 @@
 				-206.4002,
 				-203.3257
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1438,6 +1537,8 @@
 				-184.6185,
 				-137.8321
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1472,6 +1573,7 @@
 			},
 			"use_custom_color": true,
 			"width": 160.1077423095703,
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "Width"
@@ -1546,6 +1648,7 @@
 				"name": "3PointOffsetFrac_Lite"
 			},
 			"width": 155.9138946533203,
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "Value",
@@ -1584,6 +1687,7 @@
 				"name": "3PointOffsetFrac_Lite"
 			},
 			"width": 152.7311248779297,
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "Value",
@@ -1621,6 +1725,7 @@
 				"name": "Lite Texture Settings"
 			},
 			"width": 195.6847381591797,
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "X"
@@ -1661,6 +1766,7 @@
 			}
 		}
 	},
+	"cached_hash": "38803cd671ae54c45fe45b720877f1e1",
 	"inputs": [
 		{
 			"name": "Width",
@@ -1732,7 +1838,7 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "2d74ff34f7dcef50a7f3c9cf19ba24f2",
+	"interface_hash": "fd86d7461726814aed8b12a0fed57ea8",
 	"bpy_ver": [
 		3,
 		2,
