--- a/fast64_internal/f3d/node_library/TileSettings.json
+++ b/fast64_internal/f3d/node_library/TileSettings.json
@@ -9,7 +9,8 @@
 			],
 			"height": 408.0,
 			"label": "Shift",
-			"width": 605.3812255859375
+			"width": 605.3812255859375,
+			"width_hidden": 100.0
 		},
 		"Frame.003": {
 			"bl_idname": "NodeFrame",
@@ -18,7 +19,8 @@
 				182.0188
 			],
 			"height": 478.1737060546875,
-			"width": 1042.607177734375
+			"width": 1042.607177734375,
+			"width_hidden": 100.0
 		},
 		"no idea lmao.001": {
 			"bl_idname": "NodeFrame",
@@ -28,7 +30,8 @@
 			],
 			"height": 404.0,
 			"label": "Mirror or Repeat",
-			"width": 736.0
+			"width": 736.0,
+			"width_hidden": 100.0
 		},
 		"Frame": {
 			"bl_idname": "NodeFrame",
@@ -38,7 +41,8 @@
 			],
 			"height": 90.0,
 			"label": "Fixes clamp bleeding lines",
-			"width": 346.6607360839844
+			"width": 346.6607360839844,
+			"width_hidden": 100.0
 		},
 		"Reroute.002": {
 			"bl_idname": "NodeReroute",
@@ -46,6 +50,8 @@
 				-897.7939,
 				-170.7716
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -69,6 +75,8 @@
 				-897.7939,
 				-192.333
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -92,6 +100,8 @@
 				-930.9956,
 				-214.68
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -119,6 +129,8 @@
 				-930.9956,
 				256.063
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -142,6 +154,8 @@
 				-963.3344,
 				292.0394
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -165,6 +179,8 @@
 				-963.3344,
 				31.5398
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -192,6 +208,8 @@
 				399.9999,
 				-11.1851
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -219,6 +237,8 @@
 				400.0,
 				361.5235
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -242,6 +262,8 @@
 				-942.762,
 				-659.1817
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -265,6 +287,8 @@
 				-942.762,
 				-464.5771
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -288,6 +312,8 @@
 				-1070.3025,
 				-288.4464
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -315,6 +341,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.002"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -345,6 +373,7 @@
 			],
 			"operation": "POWER",
 			"use_custom_color": true,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 2.0
@@ -382,6 +411,7 @@
 			],
 			"operation": "DIVIDE",
 			"use_custom_color": true,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -413,6 +443,8 @@
 				-293.5129
 			],
 			"label": "Mirror",
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -511,6 +543,7 @@
 				"serialized_type": "Node",
 				"name": "Frame.002"
 			},
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -545,6 +578,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -572,6 +607,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -599,6 +636,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -627,6 +666,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -658,6 +699,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -686,6 +729,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -714,6 +759,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -749,6 +796,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -776,6 +825,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -803,6 +854,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -830,6 +883,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -857,6 +912,7 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Value",
@@ -892,6 +948,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -919,6 +977,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -946,6 +1006,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -981,6 +1043,7 @@
 				"name": "Frame.003"
 			},
 			"use_custom_color": true,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -1023,6 +1086,7 @@
 				"name": "Frame.003"
 			},
 			"use_custom_color": true,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -1065,6 +1129,7 @@
 				"name": "Frame.003"
 			},
 			"use_custom_color": true,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -1095,6 +1160,7 @@
 				1554.8485,
 				191.283
 			],
+			"width_hidden": 80.0,
 			"inputs": {
 				"0": {
 					"name": "UV Coord"
@@ -1114,6 +1180,8 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1142,6 +1210,7 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "Fac",
@@ -1176,6 +1245,8 @@
 				-919.2795,
 				-464.5771
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1199,6 +1270,7 @@
 				-1386.619,
 				-24.8568
 			],
+			"width_hidden": 80.0,
 			"outputs": {
 				"0": {
 					"name": "Tex Coordinate",
@@ -1288,6 +1360,8 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1315,6 +1389,8 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1342,6 +1418,7 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "Fac",
@@ -1381,6 +1458,7 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -1415,6 +1493,7 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -1449,6 +1528,8 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1477,6 +1558,7 @@
 				"serialized_type": "Node",
 				"name": "no idea lmao.001"
 			},
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -1510,6 +1592,7 @@
 				"name": "no idea lmao.001"
 			},
 			"width": 154.559814453125,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Value",
@@ -1548,6 +1631,7 @@
 				"name": "no idea lmao.001"
 			},
 			"width": 156.3069610595703,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Value",
@@ -1580,6 +1664,8 @@
 				399.9999,
 				154.8376
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1607,6 +1693,8 @@
 				400.0,
 				-354.2985
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1638,6 +1726,7 @@
 				"serialized_type": "Node",
 				"name": "Frame.003"
 			},
+			"width_hidden": 60.0,
 			"inputs": {
 				"0": {
 					"name": "High",
@@ -1683,6 +1772,8 @@
 				"serialized_type": "Node",
 				"name": "Frame"
 			},
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1714,6 +1805,7 @@
 				"name": "Frame"
 			},
 			"width": 219.35653686523438,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"default_value": 0.5
@@ -1744,6 +1836,8 @@
 				215.4565,
 				-433.1859
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1800,6 +1894,8 @@
 				215.6858,
 				-117.5033
 			],
+			"width": 100.0,
+			"width_hidden": 100.0,
 			"inputs": {
 				"0": {
 					"name": "Input"
@@ -1818,6 +1914,7 @@
 			}
 		}
 	},
+	"cached_hash": "f4b7c4b76ed138788d75fcf388c06cf1",
 	"inputs": [
 		{
 			"name": "Tex Coordinate",
@@ -1869,7 +1966,7 @@
 			"bl_idname": "NodeSocketFloat"
 		}
 	],
-	"cached_hash": "706539621d598356f48228a25a3ed677",
+	"interface_hash": "df39b72b39220304da69c90aa7947e12",
 	"bpy_ver": [
 		3,
 		2,
